# FireVK

./: .gitignore  CMakeLists.txt  README.md
include/helpers/: helpers.h
include/radixmp/: radixmp.h
include/validkmers/: validkmers.h
src/: main.c
src/radixmp/: radixmp.c
src/validkmers/: validkmers.c
